--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "prettier:format": "prettier mb*user.js",
         "lint": "npm run eslint",
-        "eslint": "eslint ."
+        "eslint": "eslint mb-*user.js mbz*js"
     },
     "repository": {
         "type": "git",
