--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v1
+      - uses: actions/setup-python@v2
         with:
-          python-version: 3.6
+          python-version: '3.x'
       - name: 'Install dependencies'
         run: sudo apt install -y python3-selenium python3-pytest chromium-driver
       - name: 'Run tests'
