--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,22 +6,31 @@ jobs:
     name: 'Linter'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
       - name: 'Install dependencies'
-        run: npm install
+        run: yarn
+
       - name: 'Run linter'
-        run: npm run eslint
+        run: yarn run eslint
 
   tests:
     name: 'Selenium tests'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
         with:
-          python-version: '3.x'
+          fetch-depth: 1
+
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+          architecture: x64
+
       - name: 'Install dependencies'
         run: sudo apt install -y python3-selenium python3-pytest chromium-driver
+
       - name: 'Run tests'
         run: pytest-3 -l -v -s tests/
